# patchahead

./: .env.example  .gitignore  README.md  conftest.py  pyproject.toml  requirements.txt  run_demo.py
demo/baseline/: order_report.py
demo/downstream/app/: models.py  order_sync.py
demo/downstream/tests/: test_order_report.py  test_order_sync.py
demo/upstream/: api_v1.py  api_v2.py  changelog_field.md  changelog_v2.md
evals/: run_evals.py
evals/fixtures/: field_rename.json  method_migration.json  pagination_change.json
src/patchahead/: __init__.py  agent.py  changelog_parser.py  impact_analyzer.py  llm.py  memory.py  observability.py  patch_generator.py  paths.py  pr_summary.py  scenarios.py  schemas.py  test_runner.py
web/: index.html  server.py
